tirado api/users de admin para todos
